2003/11/24 11:27 (-0500) muppetman

	* MANIFEST: added GdkKeys.xs

	* xs/GtkDialog.xs: nearly doubled the size of the file with api 
	documentation, mostly copied or adapted from the C api reference.
	re-ordered some of the xsubs to make more sense in the doc, but
	changed no code.

	* xs/GtkWidget.xs: added some 2.2.x methods that got omitted by
	accident: get_root_window, get_screen, and has_screen.

2003/11/23 20:01 (-0500) rwmcfa1

	* xs/GdkKeys.xs: initial import, implements Gtk2::Gdk::Keymap and 
	Gtk2::Gdk::Keyval functions. some need Gtk2::Gdk::KeymapKey typemap.

	* xs_files-2.0: added ^

2003/11/21 10:43 (-0500) muppetman

	* xs/GtkWindow.xs: add some enums to Gtk2::Window's doc.

2003/11/21 02:16 (-0500) muppetman

	* Gtk2.pm, README, Makefile.PL: update requirements to Glib 1.012,
	and bump version for 1.012 beta release.

	* xs/GtkIconFactory.xs, xs/GtkIconFactory.xs, xs/GtkSelection.xs,
	xs/GtkTextIter.xs, xs/GtkTextTag.xs, xs/GtkTreeModel.xs,
	xs/PangoTabs.xs: remove copy methods in favor of Glib::Boxed::copy.

2003/11/21 01:09 (-0500) muppetman

	* CodeGen.pm, gtk2perl.h, xs/GdkGC.xs, xs/GdkPixbuf.xs,
	xs/GtkCellRenderer.xs, xs/GtkItemFactory.xs, xs/GtkNotebook.xs,
	xs/GtkSelection.xs, xs/GtkTooltips.xs, xs/GtkTreeSortable.xs:
	use SvOK() as a lighter test for definedness than SvTRUE().
	generally just try to make these tests cheaper.

	* xs/GtkTreeModel.xs: rearrange iter_next() to avoid leaking the
	iter copy when there is no next node.

2003/11/20 19:43 (-0500) rwmcfa1

	* Makefile.PL: some of it, V should be in there even on win32.

	* xs/GtkItemFactory.xs: ..._factory_new, allow accel_group to default,
	Torsten Schoenfeld

	* Gtk2.pm: patch applied to improve the cleanpath stuff.

2003/11/19 14:14 (-0500) muppetman

	* Makefile.PL: don't do the install stuff on win32, it b0rks things.

	* Gtk2.exports: newSVGdkModifierType isn't a function anymore.

	* xs/GtkEditable.xs, xs/GtkMenu.xs: apparently cl.exe (MSVC's compiler)