@@ -197,8 +197,7 @@ gtk_text_iter_has_tag (iter, tag)
 ### GSList* gtk_text_iter_get_tags (const GtkTextIter *iter)
 =for apidoc
 Returns a list of tags that apply to iter, in ascending order of priority
-(highest-priority tags are last). The GtkTextTag in the list don't have a
-reference added, but you have to free the list itself.
+(highest-priority tags are last). 
 =cut
 void
 gtk_text_iter_get_tags (GtkTextIter *iter)
@@ -502,6 +501,9 @@ gtk_text_iter_forward_find_char (iter, pred, user_data=NULL, limit=NULL)
 
 ## gboolean gtk_text_iter_forward_search (const GtkTextIter *iter, const gchar *str, GtkTextSearchFlags flags, GtkTextIter *match_start, GtkTextIter *match_end, const GtkTextIter *limit)
 #### gboolean gtk_text_iter_backward_search (const GtkTextIter *iter, const gchar *str, GtkTextSearchFlags flags, GtkTextIter *match_start, GtkTextIter *match_end, const GtkTextIter *limit)
+=for apidoc
+=signature (match_start, match_end) = $iter->forward_search ($str, $flags, $limit=NULL)
+=cut
 void
 gtk_text_iter_forward_search (iter, str, flags, limit=NULL)
 	const GtkTextIter *iter
